# mooddream

./: .gitignore  README.md  moondream_batch.py  todo.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/next/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json
desktop/src-tauri/resources/next/.next/server/: app-paths-manifest.json  functions-config-manifest.json  pages-manifest.json
desktop/src-tauri/resources/next/.next/server/app/: _not-found.html  page.js  settings.html  settings.rsc
desktop/src-tauri/resources/next/.next/server/app/_not-found.segments/: _full.segment.rsc  _head.segment.rsc  _index.segment.rsc  _not-found.segment.rsc  _tree.segment.rsc
desktop/src-tauri/resources/next/.next/server/app/_not-found.segments/_not-found/: __PAGE__.segment.rsc
desktop/src-tauri/resources/next/.next/server/app/api/health/: route_client-reference-manifest.js
desktop/src-tauri/resources/next/.next/server/app/api/projects/: route_client-reference-manifest.js
desktop/src-tauri/resources/next/.next/server/app/settings/: page.js  page_client-reference-manifest.js
desktop/src-tauri/resources/next/.next/server/app/settings.segments/: _full.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc  settings.segment.rsc
desktop/src-tauri/resources/next/.next/server/chunks/: 502.js  531.js  827.js
desktop/src-tauri/resources/next/.next/server/pages/: 500.html
desktop/src-tauri/resources/next/.next/static/css/: 2d39bed1e88b2815.css
desktop/src-tauri/src/: main.rs
(+73 files in other folders)
