[package]
name = "moondream-desktop"
version = "0.1.0"
description = "Reference desktop wrapper (Tauri + local Next.js server)"
authors = ["Reference"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


